<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="34dp"
    android:background="@drawable/permission_dialog_bg">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_dialog_heading"
        android:textSize="16sp"
        android:layout_margin="24dp"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/dark_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_dialog_text"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/dark_text_color"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/inter_regular"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="46dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/inst1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_inst_1"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/dark_text_color"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="46dp"
        app:layout_constraintTop_toBottomOf="@id/subTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/inst2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_inst_2"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/dark_text_color"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/inter_regular"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="46dp"
        app:layout_constraintTop_toBottomOf="@id/inst1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/inst3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_inst_3"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/dark_text_color"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/inter_regular"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="46dp"
        app:layout_constraintTop_toBottomOf="@id/inst2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <View
        android:id="@+id/btnTopLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:background="@color/transparent_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inst3"
        app:layout_constraintBottom_toTopOf="@+id/goBtn"/>

    <android.widget.Button
        android:id="@+id/goBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/dialog_button_text_color"
        android:fontFamily="@font/inter_bold"
        android:background="@drawable/dialog_button_bg"
        app:layout_constraintTop_toBottomOf="@id/btnTopLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>