<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textSize="16sp"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/dark_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unable_to_proceed"
        android:textSize="15sp"
        android:textColor="@color/dark_text_color"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_regular"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="46dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <android.widget.Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="@color/dialog_button_text_color"
        android:textSize="16sp"
        android:fontFamily="@font/inter_bold"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/dialog_button_bg"
        app:layout_constraintTop_toBottomOf="@id/sub_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>