<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialog_bg_facia"
    android:padding="5dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/confirm_cancellation"
        android:textColor="@color/dark_text_color"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/sure_to_cancel_process"
        android:textColor="@color/light_text_color"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="46dp" />

    <android.widget.Button
        android:id="@+id/reject"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/dialog_cancel_btn"
        android:fontFamily="@font/inter_regular"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/light_text_color"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/accept"
        app:layout_constraintTop_toBottomOf="@id/sub_title" />

    <android.widget.Button
        android:id="@+id/accept"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/dialog_ok_btn"
        android:fontFamily="@font/inter_regular"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/facia_white_color"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/reject"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_title" />


</androidx.constraintlayout.widget.ConstraintLayout>
