<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/facia_white_color"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/continueBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/thanksTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/thank_you"
                android:textColor="@color/facia_black_color"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/comeBackTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/please_come_back"
                android:textColor="@color/facia_black_color"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thanksTxt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <android.widget.Button
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/inter_medium"
            android:padding="10dp"
            android:text="@string/continue_st"
            android:textAllCaps="false"
            android:textColor="@color/facia_white_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tryAgainBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="1" />

        <android.widget.Button
            android:id="@+id/tryAgainBtn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_bg_transparent"
            android:fontFamily="@font/inter_medium"
            android:padding="10dp"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/light_text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/footer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="1" />

        <include
            android:id="@+id/footer"
            layout="@layout/facia_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
